--- a/docs/layouts/partials/parts/btn.html
+++ b/docs/layouts/partials/parts/btn.html
@@ -1,38 +1,53 @@
-<p class="btn"><a href="">Button</a></p>
+<p class="btn"><a href="">Default</a></p>
 <p class="btn primary"><a href="">Primary</a></p>
-<p class="btn secondly"><a href="">Secondly</a></p>
 <p class="btn green"><a href="">Success</a></p>
+<p class="btn blue"><a href="">Info</a></p>
 <p class="btn orange"><a href="">Warning</a></p>
 <p class="btn red"><a href="">Danger</a></p>
 
 
 <h3>button Element</h3>
-<p class="btn"><button>Button</button></p>
+<p class="btn"><button>Default</button></p>
 <p class="btn primary"><button>Button</button></p>
-<p class="btn secondly"><button>Button</button></p>
 <p class="btn green"><button>Success</button></p>
+<p class="btn blue"><button>Info</button></p>
 <p class="btn orange"><button>Warning</button></p>
 <p class="btn red"><button>Danger</button></p>
 
 <h3>input Element</h3>
-<p class="btn"><input type="submit" value="Button"/></p>
+<p class="btn"><input type="submit" value="Default"/></p>
 <p class="btn primary"><input type="submit" value="Button"/></p>
-<p class="btn secondly"><input type="submit" value="Button"/></p>
-<p class="btn green"><input type="submit" value="Button"/></p>
-<p class="btn orange"><input type="submit" value="Button"/></p>
-<p class="btn red"><input type="submit" value="Button"/></p>
+<p class="btn green"><input type="submit" value="Success"/></p>
+<p class="btn blue"><input type="submit" value="Info"/></p>
+<p class="btn orange"><input type="submit" value="Warning"/></p>
+<p class="btn red"><input type="submit" value="Danger"/></p>
 
 <h2>ボタン (サイズ)</h2>
-<p class="btn primary ss"><a href="">Mini button</a></p>
+<p class="btn primary mini"><a href="">Mini button</a></p>
 <p class="btn primary small"><a href="">Small button</a></p>
 <p class="btn primary"><a href="">Default button</a></p>
 <p class="btn primary large"><a href="">Large button</a></p>
-<p class="btn primary ll"><a href="">Big button</a></p>
+<p class="btn primary big"><a href="">Big button</a></p>
+
+<h2>ボタン (幅サイズ)</h2>
+<p class="btn primary narrow"><a href="">narrow</a></p>
+<p class="btn primary short"><a href="">short</a></p>
+<p class="btn primary"><a href="">Default button</a></p>
+<p class="btn primary long"><a href="">long</a></p>
+<p class="btn primary wide"><a href="">wide</a></p>
+<p class="btn primary free"><a href="">free</a></p>
+
+<h2>ボタン (高さサイズ)</h2>
+<p class="btn primary lower"><a href="">lower</a></p>
+<p class="btn primary low"><a href="">low</a></p>
+<p class="btn primary"><a href="">Default button</a></p>
+<p class="btn primary high"><a href="">high</a></p>
+<p class="btn primary lofty"><a href="">lofty</a></p>
 
 <h2>ボタン (Style)</h2>
-<a class="btn" href="">Button</a>
-<button class="btn" value="">Button</button>
-<input class="btn" type="submit" value="Button"/>
+<a class="btn" href="">Default</a>
+<button class="btn" value="">Default</button>
+<input class="btn" type="submit" value="Default"/>
 
 <br/>
 
@@ -42,30 +57,39 @@
 
 <br/>
 
-<a class="btn secondly" href="">Button</a>
-<button class="btn secondly" value="">Button</button>
-<input class="btn secondly" type="submit" value="Button"/>
+<a class="btn green" href="">Success</a>
+<button class="btn green" value="">Success</button>
+<input class="btn green" type="submit" value="Success"/>
 
 <br/>
 
-<a class="btn green" href="">Button</a>
-<button class="btn green" value="">Button</button>
-<input class="btn green" type="submit" value="Button"/>
+<a class="btn blue" href="">Info</a>
+<button class="btn blue" value="">Info</button>
+<input class="btn blue" type="submit" value="Info"/>
 
 <br/>
 
-<a class="btn orange" href="">Button</a>
-<button class="btn orange" value="">Button</button>
-<input class="btn orange" type="submit" value="Button"/>
+<a class="btn orange" href="">Warning</a>
+<button class="btn orange" value="">Warning</button>
+<input class="btn orange" type="submit" value="Warning"/>
 
 <br/>
 
-<a class="btn red" href="">Button</a>
-<button class="btn red" value="">Button</button>
-<input class="btn red" type="submit" value="Button"/>
+<a class="btn red" href="">Danger</a>
+<button class="btn red" value="">Danger</button>
+<input class="btn red" type="submit" value="Danger"/>
 
 
 <h2>ボタングループ</h2>
+<div class="btnGroup">
+    <p class="btn"><a href="">Default</a></p><!--
+    --><p class="btn"><a href="">Default</a></p><!--
+    --><p class="btn"><a href="">Default</a></p><!--
+    --><p class="btn"><a href="">Default</a></p><!--
+    --><p class="btn"><a href="">Default</a></p><!--
+    --><p class="btn"><a href="">Default</a></p>
+</div>
+
 <div class="btnGroup">
     <p class="btn primary"><a href="">Primary</a></p><!--
     --><p class="btn primary"><a href="">Primary</a></p><!--
