--- a/docs/layouts/partials/parts/btn.html
+++ b/docs/layouts/partials/parts/btn.html
@@ -79,6 +79,54 @@
 <button class="btn red" value="">Danger</button>
 <input class="btn red" type="submit" value="Danger"/>
 
+<br/>
+<br/>
+<br/>
+
+<h2>ドロップダウン</h2>
+
+<div class="dropdown">
+    <a class="btn" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn primary" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn green" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn blue" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn orange" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn red" href="">DropDown</a>
+</div>
+
+<div class="dropdown">
+    <a class="btn mini" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn primary small" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn green" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn blue large" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn orange big" href="">DropDown</a>
+</div>
+<div class="dropdown">
+    <a class="btn red wide" href="">DropDown</a>
+</div>
+
+
+<br/>
+<br/>
+<br/>
 
 <h2>ボタングループ</h2>
 <div class="btnGroup">
@@ -101,3 +149,7 @@
     --><button class="btn orange" value="">Button</button><!--
     --><input class="btn red" type="submit" value="Button"/>
 </div>
+
+<br/>
+<br/>
+<br/>
