--- a/scss/atomic-package/base/_setting.scss
+++ b/scss/atomic-package/base/_setting.scss
@@ -3,6 +3,13 @@ $baseBgColor: #fff;
 $imgPath: "../img/ui/";
 $fontPath: "../font/";
 
+$colorDefault: #F9F9F9;
+$colorPrimary: #2C3D50;
+$colorGreen: #17BC9C;
+$colorBlue: #3598DB;
+$colorOrange: #F39C12;
+$colorRed: #E74C3C;
+
 $colorAqua: #0ff;
 
 $linkMainColor: #1397E1;
