add iconBtn & icon round

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -2,7 +2,7 @@
 <section id="top">
     <div class="container">
 
-        <h2>ボタン (Wrap Style)</h2>
+        <h2 class="title">ボタン (Wrap Style)</h2>
         {{ partial "parts/btn.html" . }}
 
         <p class="btn" data-ap-scroll="#scroll">
@@ -14,19 +14,19 @@
         </p>
 
 
-        <h2>タイトル</h2>
+        <h2 class="title">タイトル</h2>
         {{ partial "parts/title.html" . }}
 
-        <h2>メニュー</h2>
+        <h2 class="title">メニュー</h2>
         {{ partial "parts/menu.html" . }}
 
-        <h3>ページネーション</h3>
+        <h3 class="title">ページネーション</h3>
         {{ partial "parts/pagination.html" . }}
 
-        <h3>タブメニュー</h3>
+        <h3 class="title">タブメニュー</h3>
         {{ partial "parts/tab_menu.html" . }}
 
-        <h3>ドロップダウン</h3>
+        <h3 class="title">ドロップダウン</h3>
         <div data-ap-dropdown>
             <div>トリガーボタン</div>
 
@@ -46,7 +46,7 @@
         <p class="icon batch"></p>
 
 
-        <h2>テキスト</h2>
+        <h2 class="title">テキスト</h2>
         <p class="text">テキスト</p>
         <p class="text">テキストテキストテキストテキストテキストテキスト</p>
         <p class="text">テキストテキストテキストテキストテキスト</p>
@@ -56,7 +56,7 @@
         <p class="text link"><a href="">テキストテキスト</a></p>
         <p class="text copy">コピーライト</p>
 
-        <h2>サムネイル</h2>
+        <h2 class="title">サムネイル</h2>
         
         <p class="thumbnail"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
         <p class="thumbnail round"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
@@ -68,29 +68,29 @@
         <img class="thumbnail circle" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
         <img class="thumbnail frame" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
 
-        <h2>ボックス</h2>
+        <h2 class="title">ボックス</h2>
         {{ partial "parts/box.html" . }}
 
-        <h2>フォーム</h2>
+        <h2 class="title">フォーム</h2>
         {{ partial "parts/form.html" . }}
 
-        <h2>リスト</h2>
+        <h2 class="title">リスト</h2>
         {{ partial "parts/list.html" . }}
 
-        <h2>テーブル</h2>
+        <h2 class="title">テーブル</h2>
         {{ partial "parts/table.html" . }}
 
-        <h2>アラート</h2>
+        <h2 class="title">アラート</h2>
         {{ partial "parts/alert.html" . }}
 
-        <h2>toggle</h2>
+        <h2 class="title">toggle</h2>
         <a href="" data-ap-toggle="#toggleContents">トグル</a>
 
         <p data-ap-toggle="#toggleContents">トグル2</p>
 
         <div id="toggleContents">トグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツ</div>
 
-        <h2>switcher</h2>
+        <h2 class="title">switcher</h2>
 
         <ul class="switcher" data-ap-switcher="#switcherContents">
             <li><a href="">switcher001</a></li>
@@ -155,21 +155,21 @@
             }
         </style>
 
-        <h2>アイコン</h2>
+        <h2 class="title">アイコン</h2>
         {{ partial "parts/icon.html" . }}
 
-        <h2>モーダルウィンドウ</h2>
+        <h2 class="title">モーダルウィンドウ</h2>
         <p class="btn primary"><a href="#modalWindow" data-ap-modal>モーダルウィンドウ</a></p>
 
 
-        <h2>ヘッダー</h2>
+        <h2 class="title">ヘッダー</h2>
         <header class="header">
             <p class="logo main"></p>
         </header>
 
 
 
-        <h2>フッター</h2>
+        <h2 class="title">フッター</h2>
 
         <!--<div class="modalWindow"></div>-->
 
