--- a/docs/layouts/partials/parts/icon.html
+++ b/docs/layouts/partials/parts/icon.html
@@ -742,3 +742,47 @@
 <p class="icon ap-wpbeginner"></p>
 <p class="icon ap-wpforms"></p>
 <p class="icon ap-yoast"></p>
+
+<br/>
+<br/>
+
+<h2 class="title">アイコンボタン</h2>
+
+<br/>
+<br/>
+
+<h5 class="title">アイコンボタン (p要素)</h5>
+<p class="iconBtn"><span class="icon ap-low-vision"></span></p>
+<p class="iconBtn primary"><span class="icon ap-snapchat"></span></p>
+<p class="iconBtn green"><span class="icon ap-hourglass"></span></p>
+<p class="iconBtn blue"><span class="icon ap-twitter"></span></p>
+<p class="iconBtn orange"><span class="icon ap-viadeo"></span></p>
+<p class="iconBtn red"><span class="icon ap-television"></span></p>
+
+<br/>
+<br/>
+
+<h5 class="title">アイコンボタン (a要素)</h5>
+<a href="#" class="iconBtn"><span class="icon ap-low-vision"></span></a>
+<a href="#" class="iconBtn primary"><span class="icon ap-snapchat"></span></a>
+<a href="#" class="iconBtn green"><span class="icon ap-hourglass"></span></a>
+<a href="#" class="iconBtn blue"><span class="icon ap-twitter"></span></a>
+<a href="#" class="iconBtn orange"><span class="icon ap-viadeo"></span></a>
+<a href="#" class="iconBtn red"><span class="icon ap-television"></span></a>
+
+<br/>
+<br/>
+
+<h5 class="title">アイコンボタン (a wrap要素)</h5>
+<p class="iconBtn"><a href="#"><span class="icon ap-low-vision"></span></a></p>
+<p class="iconBtn primary"><a href="#"><span class="icon ap-snapchat"></span></a></p>
+<p class="iconBtn green"><a href="#"><span class="icon ap-hourglass"></span></a></p>
+<p class="iconBtn blue"><a href="#"><span class="icon ap-twitter"></span></a></p>
+<p class="iconBtn orange"><a href="#"><span class="icon ap-viadeo"></span></a></p>
+<p class="iconBtn red"><a href="#"><span class="icon ap-television"></span></a></p>
+
+
+<br/>
+<br/>
+<br/>
+<br/>
