--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -1045,6 +1045,21 @@ input.btn.lofty {
   font-family: FontAwesome;
 }
 
+.icon.round {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  background: #F9F9F9;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 20px;
+  line-height: 42px;
+  text-align: center;
+  vertical-align: top;
+  color: #000;
+}
+
 .icon.ap-glass::before {
   content: "\f000";
 }
@@ -3575,6 +3590,93 @@ input.btn.lofty {
 
 .icon.ap-yoast::before {
   content: "\f2b1";
+}
+
+.iconBtn {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  background: #F9F9F9;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 20px;
+  line-height: 42px;
+  text-align: center;
+  vertical-align: top;
+  color: #000;
+}
+
+.iconBtn > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: #000;
+}
+
+.iconBtn.primary {
+  background: #2C3D50;
+  color: #fff;
+}
+
+.iconBtn.primary:hover {
+  background: #76828D;
+}
+
+.iconBtn.primary > a {
+  color: #fff;
+}
+
+.iconBtn.green {
+  background: #17BC9C;
+  color: #fff;
+}
+
+.iconBtn.green:hover {
+  background: #69D3BF;
+}
+
+.iconBtn.green > a {
+  color: #fff;
+}
+
+.iconBtn.blue {
+  background: #3598DB;
+  color: #fff;
+}
+
+.iconBtn.blue:hover {
+  background: #7BBCE8;
+}
+
+.iconBtn.blue > a {
+  color: #fff;
+}
+
+.iconBtn.orange {
+  background: #F39C12;
+  color: #fff;
+}
+
+.iconBtn.orange:hover {
+  background: #F7BF65;
+}
+
+.iconBtn.orange > a {
+  color: #fff;
+}
+
+.iconBtn.red {
+  background: #E74C3C;
+  color: #fff;
+}
+
+.iconBtn.red:hover {
+  background: #EF8B80;
+}
+
+.iconBtn.red > a {
+  color: #fff;
 }
 
 /* Modal Style
