add icon size style

--- a/docs/layouts/partials/parts/icon.html
+++ b/docs/layouts/partials/parts/icon.html
@@ -746,6 +746,37 @@
 <br/>
 <br/>
 
+<h5 class="title">アイコン カラー</h5>
+<p class="icon ap-lastfm"></p>
+<p class="icon ap-lastfm-square primary"></p>
+<p class="icon ap-toggle-off green"></p>
+<p class="icon ap-toggle-on blue"></p>
+<p class="icon ap-bicycle orange"></p>
+<p class="icon ap-bus red"></p>
+
+<br/>
+<br/>
+
+<h5 class="title">アイコン サイズ</h5>
+
+<p class="icon ap-lastfm mini"></p>
+<p class="icon ap-lastfm-square primary small"></p>
+<p class="icon ap-toggle-off green"></p>
+<p class="icon ap-toggle-on blue large"></p>
+<p class="icon ap-bicycle orange xLarge"></p>
+<p class="icon ap-bus red big"></p>
+
+
+<br/>
+<br/>
+
+<p class="icon ap-lastfm mini"></p>
+<p class="icon ap-lastfm-square primary"></p>
+<p class="icon ap-toggle-off green x2"></p>
+<p class="icon ap-toggle-on blue x3"></p>
+<p class="icon ap-bicycle orange x4"></p>
+<p class="icon ap-bus red x5"></p>
+
 <h2 class="title">アイコンボタン</h2>
 
 <br/>
