refactor icon size style

--- a/docs/layouts/partials/parts/icon.html
+++ b/docs/layouts/partials/parts/icon.html
@@ -760,8 +760,8 @@
 <h5 class="title">アイコン サイズ</h5>
 
 <p class="icon ap-lastfm mini"></p>
-<p class="icon ap-lastfm-square primary small"></p>
-<p class="icon ap-toggle-off green"></p>
+<p class="icon ap-lastfm-square primary"></p>
+<p class="icon ap-toggle-off green small"></p>
 <p class="icon ap-toggle-on blue large"></p>
 <p class="icon ap-bicycle orange xLarge"></p>
 <p class="icon ap-bus red big"></p>
@@ -817,3 +817,12 @@
 <br/>
 <br/>
 <br/>
+
+<h5 class="title">アイコンボタン サイズ</h5>
+<p class="iconBtn mini"><span class="icon ap-low-vision"></span></p>
+<p class="iconBtn primary small"><span class="icon ap-snapchat"></span></p>
+<p class="iconBtn green"><span class="icon ap-hourglass"></span></p>
+<p class="iconBtn blue large"><span class="icon ap-twitter"></span></p>
+<p class="iconBtn orange big"><span class="icon ap-viadeo"></span></p>
+<p class="iconBtn red big"><span class="icon ap-television"></span></p>
+
