add iconbtn size type

--- a/docs/layouts/partials/parts/icon.html
+++ b/docs/layouts/partials/parts/icon.html
@@ -826,3 +826,22 @@
 <p class="iconBtn orange big"><span class="icon ap-viadeo"></span></p>
 <p class="iconBtn red big"><span class="icon ap-television"></span></p>
 
+<br/>
+<br/>
+
+<a href="#" class="iconBtn mini"><span class="icon ap-low-vision"></span></a>
+<a href="#" class="iconBtn primary small"><span class="icon ap-snapchat"></span></a>
+<a href="#" class="iconBtn green"><span class="icon ap-hourglass"></span></a>
+<a href="#" class="iconBtn blue large"><span class="icon ap-twitter"></span></a>
+<a href="#" class="iconBtn orange big"><span class="icon ap-viadeo"></span></a>
+<a href="#" class="iconBtn red big"><span class="icon ap-television"></span></a>
+
+<br/>
+<br/>
+
+<p class="iconBtn mini"><a href="#"><span class="icon ap-low-vision"></span></a></p>
+<p class="iconBtn primary small"><a href="#"><span class="icon ap-snapchat"></span></a></p>
+<p class="iconBtn green"><a href="#"><span class="icon ap-hourglass"></span></a></p>
+<p class="iconBtn blue large"><a href="#"><span class="icon ap-twitter"></span></a></p>
+<p class="iconBtn orange big"><a href="#"><span class="icon ap-viadeo"></span></a></p>
+<p class="iconBtn red big"><a href="#"><span class="icon ap-television"></span></a></p>
