--- a/docs/layouts/partials/parts/pagination.html
+++ b/docs/layouts/partials/parts/pagination.html
@@ -1,7 +1,7 @@
 <nav class="pagination">
     <ul class="paginationList">
         <li class="prev">
-            <a href=""></a>
+            <a href=""><<</a>
         </li>
         <li>
             <a href="">1</a>
@@ -9,14 +9,60 @@
         <li>
             <a href="">2</a>
         </li>
-        <li>
+        <li class="active">
             <a href="">3</a>
         </li>
         <li>
             <a href="">4</a>
         </li>
         <li class="next">
-            <a href=""></a>
+            <a href="">>></a>
+        </li>
+    </ul>
+</nav>
+
+<nav class="pagination">
+    <ul class="paginationList">
+        <li class="prev">
+            <a href=""><<</a>
+        </li>
+        <li>
+            <a href="">1</a>
+        </li>
+        <li>
+            <a href="">2</a>
+        </li>
+        <li class="active">
+            <a href="">3</a>
+        </li>
+        <li>
+            <a href="">4</a>
+        </li>
+        <li class="next">
+            <a href="">>></a>
+        </li>
+    </ul>
+</nav>
+
+<nav class="pagination">
+    <ul class="paginationList">
+        <li class="prev">
+            <a href=""><<</a>
+        </li>
+        <li>
+            <a href="">1</a>
+        </li>
+        <li>
+            <a href="">2</a>
+        </li>
+        <li class="active">
+            <a href="">3</a>
+        </li>
+        <li>
+            <a href="">4</a>
+        </li>
+        <li class="next">
+            <a href="">>></a>
         </li>
     </ul>
 </nav>
