--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -1,202 +1,231 @@
 {{ partial "header.html" . }}
 <section id="top">
-    <div class="container">
+  <div class="container">
 
-        <h2 class="title">ボタン (Wrap Style)</h2>
-        {{ partial "parts/btn.html" . }}
+    <h2 class="title">ボタン (Wrap Style)</h2>
+    {{ partial "parts/btn.html" . }}
 
-        <p class="btn" data-ap-scroll="#scroll">
-            <a href="">スクロールトリガー</a>
-        </p>
+    <p class="btn" data-ap-scroll="#scroll">
+      <a href="">スクロールトリガー</a>
+    </p>
 
-        <p class="btn green" data-ap-scroll="400">
-            <a href="">スクロールトリガー2</a>
-        </p>
+    <p class="btn green" data-ap-scroll="400">
+      <a href="">スクロールトリガー2</a>
+    </p>
 
+    <h2 class="title">タイトル</h2>
+    {{ partial "parts/title.html" . }}
 
-        <h2 class="title">タイトル</h2>
-        {{ partial "parts/title.html" . }}
+    <h2 class="title">メニュー</h2>
+    {{ partial "parts/menu.html" . }}
 
-        <h2 class="title">メニュー</h2>
-        {{ partial "parts/menu.html" . }}
+    <h3 class="title">ページネーション</h3>
+    {{ partial "parts/pagination.html" . }}
 
-        <h3 class="title">ページネーション</h3>
-        {{ partial "parts/pagination.html" . }}
+    <h3 class="title">タブメニュー</h3>
+    {{ partial "parts/tab_menu.html" . }}
 
-        <h3 class="title">タブメニュー</h3>
-        {{ partial "parts/tab_menu.html" . }}
+    <h3 class="title">ドロップダウン</h3>
 
-        <h3 class="title">ドロップダウン</h3>
-        <div data-ap-dropdown>
-            <div>トリガーボタン</div>
+    <div data-ap-dropdown>
+      <div>トリガーボタン</div>
 
-            <div class="dropdown">ドロップダウンコンテンツ</div>
-        </div>
-
-
-        <h2>アイコン</h2>
-        <p class="icon"></p>
-        <p class="icon"></p>
-        <p class="icon"></p>
-        <p class="icon"></p>
-        <p class="icon"></p>
-        <p class="icon"></p>
-        <p class="icon"></p>
-
-        <p class="icon batch"></p>
+      <div class="dropdown">ドロップダウンコンテンツ</div>
+    </div>
 
 
-        <h2 class="title">テキスト</h2>
-        <p class="text">テキスト</p>
-        <p class="text">テキストテキストテキストテキストテキストテキスト</p>
-        <p class="text">テキストテキストテキストテキストテキスト</p>
-        <p class="text">テキストテキストテキストテキストテキスト</p>
+    <h2>アイコン</h2>
 
-        <p class="text">テキスト<span class="string">テ</span>キストテキストテキストテキスト</p>
-        <p class="text link"><a href="">テキストテキスト</a></p>
-        <p class="text copy">コピーライト</p>
+    <p class="icon"></p>
 
-        <h2 class="title">サムネイル</h2>
-        
-        <p class="thumbnail"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
-        <p class="thumbnail round"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
-        <p class="thumbnail circle"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
-        <p class="thumbnail frame"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
+    <p class="icon"></p>
 
-        <img class="thumbnail" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
-        <img class="thumbnail round" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
-        <img class="thumbnail circle" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
-        <img class="thumbnail frame" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
+    <p class="icon"></p>
 
-        <h2 class="title">ボックス</h2>
-        {{ partial "parts/box.html" . }}
+    <p class="icon"></p>
 
-        <h2 class="title">フォーム</h2>
-        {{ partial "parts/form.html" . }}
+    <p class="icon"></p>
 
-        <h2 class="title">リスト</h2>
-        {{ partial "parts/list.html" . }}
+    <p class="icon"></p>
 
-        <h2 class="title">テーブル</h2>
-        {{ partial "parts/table.html" . }}
+    <p class="icon"></p>
 
-        <h2 class="title">アラート</h2>
-        {{ partial "parts/alert.html" . }}
-
-        <h2 class="title">toggle</h2>
-        <a href="" data-ap-toggle="#toggleContents">トグル</a>
-
-        <p data-ap-toggle="#toggleContents">トグル2</p>
-
-        <div id="toggleContents">トグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツ</div>
-
-        <h2 class="title">switcher</h2>
-
-        <ul class="switcher" data-ap-switcher="#switcherContents">
-            <li><a href="">switcher001</a></li>
-            <li>switcher002</li>
-            <li><a href="">switcher003</a></li>
-            <li>
-                <div>switcher004</div>
-                <a href=""></a>
-                <p></p>
-            </li>
-        </ul>
-
-        <ul class="switcher" data-ap-switcher="#switcherContents">
-            <li><a href="">switcher001</a></li>
-            <li>switcher002</li>
-            <li><a href="">switcher003</a></li>
-            <li>
-                <div>switcher004</div>
-                <a href=""></a>
-                <p></p>
-            </li>
-        </ul>
-
-        <ul class="switcher" data-ap-switcher>
-            <li></li>
-        </ul>
-
-        <div class="switcherContents" id="switcherContents">
-            <div>ああああああ</div>
-            <div>いいいいいい</div>
-            <div>ううううう</div>
-            <div>えええええ</div>
-        </div>
+    <p class="icon batch"></p>
 
 
-        <p data-ap-side="#sideMenu">サイドメニュー</p>
+    <h2 class="title">テキスト</h2>
 
-        <div class="sideMenu" id="sideMenu">
-            <p>あああああああああ</p>
-            <p>いいいいいいいいいい</p>
-        </div>
+    <p class="text">テキスト</p>
 
-        <style>
-            .switcherContents > div {
-                display: none;
-            }
-            .switcherContents > .show {
-                display: block;
-            }
-            #toggleContents.active {
-                font-size: 20px;
-            }
-            .sideMenu {
-                position: fixed;
-                top: 0;
-                left: 0;
-                background: #ccc;
-                display: none;
-            }
-            .sideMenu.active {
-                display: block;
-            }
-        </style>
+    <p class="text">テキストテキストテキストテキストテキストテキスト</p>
 
-        <h2 class="title">アイコン</h2>
-        {{ partial "parts/icon.html" . }}
+    <p class="text">テキストテキストテキストテキストテキスト</p>
 
-        <h2 class="title">モーダルウィンドウ</h2>
-        <p class="btn primary"><a href="#modalWindow" data-ap-modal>モーダルウィンドウ</a></p>
+    <p class="text">テキストテキストテキストテキストテキスト</p>
+
+    <p class="text">テキスト<span class="string">テ</span>キストテキストテキストテキスト</p>
+
+    <p class="text link"><a href="">テキストテキスト</a></p>
+
+    <p class="text copy">コピーライト</p>
+
+    <h2 class="title">サムネイル</h2>
+
+    <p class="thumbnail"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
+
+    <p class="thumbnail round"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
+
+    <p class="thumbnail circle"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
+
+    <p class="thumbnail frame"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
+
+    <img class="thumbnail" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
+    <img class="thumbnail round" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
+    <img class="thumbnail circle" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
+    <img class="thumbnail frame" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
+
+    <h2 class="title">ボックス</h2>
+    {{ partial "parts/box.html" . }}
+
+    <h2 class="title">フォーム</h2>
+    {{ partial "parts/form.html" . }}
+
+    <h2 class="title">リスト</h2>
+    {{ partial "parts/list.html" . }}
+
+    <h2 class="title">テーブル</h2>
+    {{ partial "parts/table.html" . }}
+
+    <h2 class="title">アラート</h2>
+    {{ partial "parts/alert.html" . }}
+
+    <h2 class="title">toggle</h2>
+    <a href="" data-ap-toggle="#toggleContents">トグル</a>
+
+    <p data-ap-toggle="#toggleContents">トグル2</p>
+
+    <div id="toggleContents">
+      トグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツ
+    </div>
+
+    <h2 class="title">switcher</h2>
+
+    <ul class="switcher" data-ap-switcher="#switcherContents">
+      <li><a href="">switcher001</a></li>
+      <li>switcher002</li>
+      <li><a href="">switcher003</a></li>
+      <li>
+        <div>switcher004</div>
+        <a href=""></a>
+
+        <p></p>
+      </li>
+    </ul>
+
+    <ul class="switcher" data-ap-switcher="#switcherContents">
+      <li><a href="">switcher001</a></li>
+      <li>switcher002</li>
+      <li><a href="">switcher003</a></li>
+      <li>
+        <div>switcher004</div>
+        <a href=""></a>
+
+        <p></p>
+      </li>
+    </ul>
+
+    <ul class="switcher" data-ap-switcher>
+      <li></li>
+    </ul>
+
+    <div class="switcherContents" id="switcherContents">
+      <div>ああああああ</div>
+      <div>いいいいいい</div>
+      <div>ううううう</div>
+      <div>えええええ</div>
+    </div>
 
 
-        <h2 class="title">ヘッダー</h2>
-        <header class="header">
-            <p class="logo main"></p>
-        </header>
+    <p data-ap-side="#sideMenu">サイドメニュー</p>
+
+    <div class="sideMenu" id="sideMenu">
+      <p>あああああああああ</p>
+
+      <p>いいいいいいいいいい</p>
+    </div>
+
+    <style>
+      .switcherContents > div {
+        display: none;
+      }
+
+      .switcherContents > .show {
+        display: block;
+      }
+
+      #toggleContents.active {
+        font-size: 20px;
+      }
+
+      .sideMenu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: #ccc;
+        display: none;
+      }
+
+      .sideMenu.active {
+        display: block;
+      }
+    </style>
+
+    <h2 class="title">アイコン</h2>
+    {{ partial "parts/icon.html" . }}
+
+    <h2 class="title">モーダルウィンドウ</h2>
+
+    <p class="btn primary"><a href="#modalWindow" data-ap-modal>モーダルウィンドウ</a></p>
 
 
+    <h2 class="title">ヘッダー</h2>
+    <header class="header">
+      <p class="logo main"></p>
+    </header>
 
-        <h2 class="title">フッター</h2>
 
-        <!--<div class="modalWindow"></div>-->
+    <h2 class="title">フッター</h2>
 
-        <div class="modalWindow" id="modalWindow">
-            <div class="modalBody">
-                <p class="btn primary"><a href="#" data-ap-modal-close>クローズ</a></p>
-                <div>コンテンツ</div>
-            </div>
-        </div>
+    <!--<div class="modalWindow"></div>-->
 
-        <div id="scroll"></div>
+    <div class="modalWindow" id="modalWindow">
+      <div class="modalBody">
+        <p class="btn primary"><a href="#" data-ap-modal-close>クローズ</a></p>
 
-        <footer class="footer">
+        <div>コンテンツ</div>
+      </div>
+    </div>
 
-        </footer>
+    <div id="scroll"></div>
 
-        <div id="primary" class="content-area">
-            <div id="content" class="site-content" role="main">
+    <footer class="footer">
 
-                {{ range first 10 (where .Data.Pages "Section" "post") }}
-                {{ partial "content.html" . }}
-                {{ end }}
+    </footer>
 
-            </div><!-- #content -->
-        </div><!-- #primary -->
-        {{ partial "sidebar.html" . }}
-    </div><!-- #main-content -->
+    <div id="primary" class="content-area">
+      <div id="content" class="site-content" role="main">
+
+        {{ range first 10 (where .Data.Pages "Section" "post") }}
+        {{ partial "content.html" . }}
+        {{ end }}
+
+      </div>
+      <!-- #content -->
+    </div>
+    <!-- #primary -->
+    {{ partial "sidebar.html" . }}
+  </div>
+  <!-- #main-content -->
 </section>
 
 
