--- a/docs/layouts/partials/parts/pagination.html
+++ b/docs/layouts/partials/parts/pagination.html
@@ -67,6 +67,29 @@
   </ul>
 </nav>
 
+<nav class="pagination">
+  <ul class="paginationList">
+    <li class="prev">
+      <a href=""><span class="icon ap-hand-o-left large"></span></a>
+    </li>
+    <li>
+      <a href="">1</a>
+    </li>
+    <li>
+      <a href="">2</a>
+    </li>
+    <li class="active">
+      <a href="">3</a>
+    </li>
+    <li>
+      <a href="">4</a>
+    </li>
+    <li class="next">
+      <a href=""><span class="icon ap-hand-o-right large"></span></a>
+    </li>
+  </ul>
+</nav>
+
 <h4>ページネーション color</h4>
 
 <nav class="pagination">
@@ -208,7 +231,99 @@
 <h4>ページネーション size</h4>
 
 <nav class="pagination">
+  <ul class="paginationList mini">
+    <li class="prev">
+      <a href=""><<</a>
+    </li>
+    <li>
+      <a href="">1</a>
+    </li>
+    <li>
+      <a href="">2</a>
+    </li>
+    <li class="active">
+      <a href="">3</a>
+    </li>
+    <li>
+      <a href="">4</a>
+    </li>
+    <li class="next">
+      <a href="">>></a>
+    </li>
+  </ul>
+</nav>
+
+<nav class="pagination">
+  <ul class="paginationList small">
+    <li class="prev">
+      <a href=""><<</a>
+    </li>
+    <li>
+      <a href="">1</a>
+    </li>
+    <li>
+      <a href="">2</a>
+    </li>
+    <li class="active">
+      <a href="">3</a>
+    </li>
+    <li>
+      <a href="">4</a>
+    </li>
+    <li class="next">
+      <a href="">>></a>
+    </li>
+  </ul>
+</nav>
+
+<nav class="pagination">
   <ul class="paginationList">
+    <li class="prev">
+      <a href=""><<</a>
+    </li>
+    <li>
+      <a href="">1</a>
+    </li>
+    <li>
+      <a href="">2</a>
+    </li>
+    <li class="active">
+      <a href="">3</a>
+    </li>
+    <li>
+      <a href="">4</a>
+    </li>
+    <li class="next">
+      <a href="">>></a>
+    </li>
+  </ul>
+</nav>
+
+<nav class="pagination">
+  <ul class="paginationList large">
+    <li class="prev">
+      <a href=""><<</a>
+    </li>
+    <li>
+      <a href="">1</a>
+    </li>
+    <li>
+      <a href="">2</a>
+    </li>
+    <li class="active">
+      <a href="">3</a>
+    </li>
+    <li>
+      <a href="">4</a>
+    </li>
+    <li class="next">
+      <a href="">>></a>
+    </li>
+  </ul>
+</nav>
+
+<nav class="pagination">
+  <ul class="paginationList big">
     <li class="prev">
       <a href=""><<</a>
     </li>
