--- a/docs/layouts/partials/parts/tab_menu.html
+++ b/docs/layouts/partials/parts/tab_menu.html
@@ -1,30 +1,108 @@
 <nav class="tab">
-    <ul class="tabList">
-        <li>
-            <a href="">Home</a>
-        </li>
-        <li>
-            <a href="">Pages</a>
-        </li>
-        <li>
-            <a href="">Pages</a>
-        </li>
-        <li>
-            <a href="">Pages</a>
-        </li>
-    </ul>
+  <ul class="tabList">
+    <li class="active">
+      <a href="">Home</a>
+    </li><!--
+ --><li>
+      <a href="">Pages</a>
+    </li><!--
+ --><li>
+      <a href="">Pages</a>
+    </li><!--
+ --><li class="disable">
+      <a href="">disable</a>
+    </li>
+  </ul>
 </nav>
 
+<br/>
+
+<nav class="tab">
+  <ul class="tabList">
+    <li class="active">
+      <a href="">Home</a>
+    </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li>
+  </ul>
+</nav>
+
+<br/>
+
+<nav class="tab">
+  <ul class="tabList">
+    <li class="active">
+      <a href="">Home</a>
+    </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li>
+  </ul>
+</nav>
+
+<br/>
+
+<nav class="tab">
+  <ul class="tabList">
+    <li class="active">
+      <a href="">Home</a>
+    </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li>
+  </ul>
+</nav>
+
+<br/>
+
+<nav class="tab">
+  <ul class="tabList">
+    <li class="active">
+      <a href="">Home</a>
+    </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li><!--
+ --><li>
+    <a href="">Pages</a>
+  </li>
+  </ul>
+</nav>
+
+<br/>
+
 <nav class="breadcrumb">
-    <ul class="breadcrumbList">
-        <li>
-            <a href=""></a>
-        </li>
-        <li>
-            <a href=""></a>
-        </li>
-        <li>
-            <a href=""></a>
-        </li>
-    </ul>
+  <ul class="breadcrumbList">
+    <li>
+      <a href=""></a>
+    </li>
+    <li>
+      <a href=""></a>
+    </li>
+    <li>
+      <a href=""></a>
+    </li>
+  </ul>
 </nav>
