--- a/docs/layouts/partials/parts/tab_menu.html
+++ b/docs/layouts/partials/parts/tab_menu.html
@@ -17,6 +17,8 @@
 
 <br/>
 
+<h4>タブメニュー color</h4>
+
 <nav class="tab">
   <ul class="tabList">
     <li class="active">
@@ -52,6 +54,8 @@
   </li>
   </ul>
 </nav>
+
+<h4>タブメニュー size</h4>
 
 <br/>
 
