--- a/docs/layouts/partials/parts/tab_menu.html
+++ b/docs/layouts/partials/parts/tab_menu.html
@@ -1,9 +1,9 @@
 <nav class="tab">
-  <ul class="tabList">
-    <li class="active">
+  <ul class="tabList" data-ap-tab>
+    <li>
       <a href="">Home</a>
     </li><!--
- --><li>
+ --><li class="active">
       <a href="">Pages</a>
     </li><!--
  --><li>
