--- a/docs/layouts/partials/head_includes.html
+++ b/docs/layouts/partials/head_includes.html
@@ -1,2 +1,3 @@
 <link href="./css/atomic-package.min.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="./css/atomic-package-docs.min.css" rel="stylesheet" type="text/css" media="screen" />
 <script src="./js/atomic-package.js"></script>
