--- a/docs/layouts/partials/header_menu.html
+++ b/docs/layouts/partials/header_menu.html
@@ -1,19 +1,22 @@
 <ul class="docsHeaderMenuList">
-    <li>
-        <a href="/">Home</a>
-    </li>
-    <li>
-        <a href="/docs/get_started/">Get Started</a>
-    </li>
-    <li>
-        <a href="/docs/javascript/">Javascript</a>
-    </li>
-    <li>
-        <a href="/docs/theme/">Theme</a>
-    </li>
-    <li>
-        <a href="/docs/tutorials/">Tutorials</a>
-    </li>
+  <li>
+    <a href="/">Home</a>
+  </li>
+  <li>
+    <a href="/get_started/">Get Started</a>
+  </li>
+  <li>
+    <a href="/core/">Core</a>
+  </li>
+  <li>
+    <a href="/javascript/">Javascript</a>
+  </li>
+  <li>
+    <a href="/theme/">Theme</a>
+  </li>
+  <li>
+    <a href="/tutorials/">Tutorials</a>
+  </li>
 </ul>
 
 
