--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    {{ partial "meta.html" . }}
+  {{ partial "meta.html" . }}
 
-    <base href="{{ .Site.BaseURL }}">
-    <title> {{ .Title }} : Atomic Package</title>
-    <link rel="canonical" href="{{ .Permalink }}">
-    {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
+  <base href="{{ .Site.BaseURL }}">
+  <title> {{ .Title }} : Atomic Package</title>
+  <link rel="canonical" href="{{ .Permalink }}">
+  {{ if .RSSlink }}
+  <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}"/>
+  {{ end }}
 
-    {{ partial "head_includes.html" . }}
+  {{ partial "head_includes.html" . }}
 </head>
 <body lang="ja">
-  <header>
-      {{ partial "header_menu.html" . }}
+  <header class="apDocsHeader">
+    {{ partial "header_menu.html" . }}
   </header>
