create docs pages

--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -16,5 +16,7 @@
 </head>
 <body lang="ja">
   <header class="apDocsHeader">
-    {{ partial "header_menu.html" . }}
+    <div class="wrap">
+      {{ partial "header_menu.html" . }}
+    </div>
   </header>
