--- a/docs/layouts/core/single.html
+++ b/docs/layouts/core/single.html
@@ -1,13 +1,6 @@
 {{ partial "header_docs.html" . }}
 
-<div class="site-content">
-  <h1>{{ .Title }}{{ with .Section }} [<a href="/{{ . }}/">{{ . }}</a>]{{ end }}</h1>
-
-
-  <h1>{{ .Title }}</h1>
-  <!--<time>{{ .Date }}</time>-->
-  <div class="author">{{ .Params.author }}</div>
-
+<div id="corePage" class="site-content">
   <nav>
     {{ with .Params.categories }}
     <div>Categories:{{ range . }} <a href="/categories/{{ . }}/">{{ . }}</a>{{ end }}</div>
@@ -15,25 +8,40 @@
     {{ with .Params.tags }}
     <div>Tags:{{ range . }} <a href="/tags/{{ . }}/">#{{ . }}</a>{{ end }}</div>
     {{ end }}
+
+    {{ range .Data.Pages }}
+    <li>
+      <a href="{{ .Permalink }}">{{ .Title }}</a>
+    </li>
+    {{ end }}
   </nav>
 
   <div class="sideMenu docs">
     <ul class="sideMenuList">
-      <li><a href="/core/button/">Button</a></li>
-      <li><a href="/core/tab">Tab</a></li>
-      <li><a href="">リスト</a></li>
-      <li><a href="">リスト</a></li>
-      <li><a href="">リスト</a></li>
-      <li><a href="">リスト</a></li>
-      <li><a href="">リスト</a></li>
-      <li><a href="">リスト</a></li>
-      <li><a href="">リスト</a></li>
-      <li><a href="">リスト</a></li>
+      {{ with .Section }}
+      <li class="title">BASE</li>
+      <li><a href="/{{ . }}/base/">Base</a></li>
+      <li class="title">ATOMIC</li>
+      <li><a href="/{{ . }}/button/">Button</a></li>
+      <li><a href="/{{ . }}/icon">Icon</a></li>
+      <li><a href="/{{ . }}/table">Table</a></li>
+      <li class="title">NAVIGATIONS</li>
+      <li><a href="/{{ . }}/nav">Nav</a></li>
+      <li><a href="/{{ . }}/navbar">Navbar</a></li>
+      <li><a href="/{{ . }}/subnav">Subnav</a></li>
+      <li><a href="/{{ . }}/breadcrumb">Breadcrumb</a></li>
+      <li><a href="/{{ . }}/pagination">Pagination</a></li>
+      <li><a href="/{{ . }}/tab">Tab</a></li>
+      <li><a href="/{{ . }}/thumbnav">Thumbnav</a></li>
+      {{ end }}
     </ul>
   </div>
 
   <article class="contents docs">
     {{ .Content }}
+
+    <div class="author">{{ .Params.author }}</div>
+    <p class="times docs"><time pubdate="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2006-01-02" }}</time></p>
   </article>
 </div>
 
