add nav menu list

--- a/docs/layouts/core/single.html
+++ b/docs/layouts/core/single.html
@@ -17,7 +17,7 @@
   </nav>
 
   <div class="sideMenu docs">
-    <ul class="sideMenuList">
+    <ul class="navList">
       {{ with .Section }}
       <li class="title">BASE</li>
       <li><a href="/{{ . }}/base/">Base</a></li>
