--- a/docs/layouts/partials/parts/menu.html
+++ b/docs/layouts/partials/parts/menu.html
@@ -3,18 +3,163 @@
 </nav>
 
 <nav class="menu">
-    <ul class="menuList">
-        <li>
-            <a href="">Home</a>
-        </li>
-        <li>
-            <a href="">Pages</a>
-        </li>
-        <li>
-            <a href="">Pages</a>
-        </li>
-        <li>
-            <a href="">Pages</a>
-        </li>
-    </ul>
+  <ul class="menuList">
+    <li>
+      <a href="">Home</a>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
+    <li>
+      <a href="">Pages</a>
+    </li>
+  </ul>
 </nav>
+
+<br/>
+<br/>
+
+<h4>ナビメニュー</h4>
+
+<ul class="navList">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<h4>ナビメニュー color</h4>
+
+  
+
+<ul class="navList primary">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList green">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList blue">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList orange">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList red">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<h4>ナビメニュー size</h4>
+
+<ul class="navList mini">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList small">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList large">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList big">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<h4>ナビメニュー size width</h4>
+<ul class="navList narrow">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList short">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList long">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList wide">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList free">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<h4>ナビメニュー size height</h4>
+<ul class="navList lower">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList low">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList high">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
+
+<ul class="navList lofty">
+  <li class="active"><a href="">Active</a></li>
+  <li><a href="">Item</a></li>
+  <li><a href="">Item</a></li>
+</ul>
